force-app/main/default/objects/Petition__c/Petition__c.object-meta.xml
<CustomObject>
    <label>Petition</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Petition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Petitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>