force-app/main/default/objects/Petition__c/fields/A_Physical_mental_issues_of_the_Respond__c.field-meta.xml
<CustomField>
    <fullName>A_Physical_mental_issues_of_the_Respond__c</fullName>
    <label>A. Physical/mental issues of the Respond</label>
    <length>255</length>
    <type>Text</type>
</CustomField>