force-app/main/default/objects/Petition__c/fields/A_Was_there_an_active_Child_Welfare__c.field-meta.xml
<CustomField>
    <fullName>A_Was_there_an_active_Child_Welfare__c</fullName>
    <label>A. Was there an active Child Welfare</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>