force-app/main/default/objects/Petition__c/fields/Address_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Address_ZipCode__c</fullName>
    <label>Address/ZipCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>