force-app/main/default/objects/Petition__c/fields/B_Inadequate_Housing__c.field-meta.xml
<CustomField>
    <fullName>B_Inadequate_Housing__c</fullName>
    <label>B. Inadequate Housing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>