force-app/main/default/objects/Petition__c/fields/B_What_services_were_offered_efforts__c.field-meta.xml
<CustomField>
    <fullName>B_What_services_were_offered_efforts__c</fullName>
    <label>B. What services were offered efforts</label>
    <type>TextArea</type>
</CustomField>