force-app/main/default/objects/Petition__c/fields/C_Current_location_of_the_Respondent__c.field-meta.xml
<CustomField>
    <fullName>C_Current_location_of_the_Respondent__c</fullName>
    <label>C. Current location of the Respondent?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>