force-app/main/default/objects/Petition__c/fields/Case_Worker_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Worker_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>