force-app/main/default/objects/Petition__c/fields/Case_Worker_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Worker_Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>