force-app/main/default/objects/Petition__c/fields/Child_s_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child&apos;s Attorney</label>
    <referenceTo>Collateral__c</referenceTo>
    <relationshipLabel>Petitions</relationshipLabel>
    <relationshipName>Petitions1</relationshipName>
    <type>Lookup</type>
</CustomField>