force-app/main/default/objects/Petition__c/fields/Child_Welfare_Services__c.field-meta.xml
<CustomField>
    <fullName>Child_Welfare_Services__c</fullName>
    <label>Child Welfare Services:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>