force-app/main/default/objects/Petition__c/fields/CPS__c.field-meta.xml
<CustomField>
    <fullName>CPS__c</fullName>
    <label>CPS:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>