force-app/main/default/objects/Petition__c/fields/Criminal__c.field-meta.xml
<CustomField>
    <fullName>Criminal__c</fullName>
    <label>Criminal:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>