force-app/main/default/objects/Petition__c/fields/D_Narrative__c.field-meta.xml
<CustomField>
    <fullName>D_Narrative__c</fullName>
    <label>D. Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>