force-app/main/default/objects/Petition__c/fields/D_Were_reasonable_efforts_not_made__c.field-meta.xml
<CustomField>
    <fullName>D_Were_reasonable_efforts_not_made__c</fullName>
    <label>D. Were reasonable efforts not made</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>