force-app/main/default/objects/Petition__c/fields/Date_Request_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Request_Completed__c</fullName>
    <label>7.Date Request Completed</label>
    <type>Date</type>
</CustomField>