force-app/main/default/objects/Petition__c/fields/Document_of_Neglect__c.field-meta.xml
<CustomField>
    <fullName>Document_of_Neglect__c</fullName>
    <label>Document of Neglect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>