force-app/main/default/objects/Petition__c/fields/E_Status_of_child_s_relationship_with_p__c.field-meta.xml
<CustomField>
    <fullName>E_Status_of_child_s_relationship_with_p__c</fullName>
    <label>E. Status of child&apos;s relationship with p</label>
    <length>255</length>
    <type>Text</type>
</CustomField>