force-app/main/default/objects/Petition__c/fields/F_Legal_status_of_Respondent__c.field-meta.xml
<CustomField>
    <fullName>F_Legal_status_of_Respondent__c</fullName>
    <label>F. Legal status of Respondent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>