force-app/main/default/objects/Petition__c/fields/Mental_health_disorder__c.field-meta.xml
<CustomField>
    <fullName>Mental_health_disorder__c</fullName>
    <label>Mental health disorder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>