force-app/main/default/objects/Petition__c/fields/Name_of_LDSS_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Name_of_LDSS_Attorney__c</fullName>
    <label>Name of LDSS Attorney</label>
    <length>80</length>
    <type>Text</type>
</CustomField>