force-app/main/default/objects/Petition__c/fields/Nature_of_Sexual_Abuse_mother_father__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Sexual_Abuse_mother_father__c</fullName>
    <label>Nature of Sexual Abuse:(mother/father)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>