force-app/main/default/objects/Petition__c/fields/Neglect_Medical_Exam_Where__c.field-meta.xml
<CustomField>
    <fullName>Neglect_Medical_Exam_Where__c</fullName>
    <label>Medical Exam?Where?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>