force-app/main/default/objects/Petition__c/fields/New_Review__c.field-meta.xml
<CustomField>
    <fullName>New_Review__c</fullName>
    <label>New/Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>