force-app/main/default/objects/Petition__c/fields/Other_Client_s_named_on_Petition__c.field-meta.xml
<CustomField>
    <fullName>Other_Client_s_named_on_Petition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Client&apos;s named on Petition</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Petitions (Other Client&apos;s named on Petition)</relationshipLabel>
    <relationshipName>Petitions9</relationshipName>
    <type>Lookup</type>
</CustomField>