force-app/main/default/objects/Petition__c/fields/Parent1_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent1_ID__c</fullName>
    <label>ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>