force-app/main/default/objects/Petition__c/fields/PARENT_S_CIRCUMSTANCE__c.field-meta.xml
<CustomField>
    <fullName>PARENT_S_CIRCUMSTANCE__c</fullName>
    <label>PARENT&apos;S CIRCUMSTANCE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A. Parent cannot be identified: (mother/father)Why?</fullName>
            </value>
            <value>
                <fullName>B. Parent&apos;s location unknown: (mother/father)</fullName>
            </value>
            <value>
                <fullName>C. Department&apos;s attempt to locate and/or contact parents: (mother/father)</fullName>
            </value>
            <value>
                <fullName>D. Physical/mental health issues of parents: (mother/father) N/A</fullName>
            </value>
            <value>
                <fullName>E. Parent incarcerated:(mother/father) if so,where?</fullName>
            </value>
            <value>
                <fullName>F. Parent&apos;s economic status: (Mother/Father)</fullName>
            </value>
            <value>
                <fullName>G. Parent&apos;s cannot or will not care for child: (mother/father)</fullName>
            </value>
            <value>
                <fullName>H. Parent substance use/abuse (mother/father)</fullName>
            </value>
            <value>
                <fullName>I. Parent admitted to using substances :(mother/father)</fullName>
            </value>
            <value>
                <fullName>J. Parent refused treatment for substance use disorder : (mother/father)</fullName>
            </value>
            <value>
                <fullName>K. Parent did not successfully complete treatment for substance use disorder:(mother/father)</fullName>
            </value>
            <value>
                <fullName>L. Parent uncooperative: (mother/father) how?</fullName>
            </value>
            <value>
                <fullName>M. Parent did not comply with Safety Plan/Service Agreement: (mother/father)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>