force-app/main/default/objects/Petition__c/fields/Petition_Date__c.field-meta.xml
<CustomField>
    <fullName>Petition_Date__c</fullName>
    <label>Petition Date</label>
    <type>Date</type>
</CustomField>