force-app/main/default/objects/Petition__c/fields/Placement_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Placement_Relationship__c</fullName>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>