force-app/main/default/objects/Petition__c/fields/Reason_for_not_notifying__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_not_notifying__c</fullName>
    <label>Reason for not notifying:</label>
    <type>TextArea</type>
</CustomField>