force-app/main/default/objects/Petition__c/fields/Severe_chronic_development_disability__c.field-meta.xml
<CustomField>
    <fullName>Severe_chronic_development_disability__c</fullName>
    <label>Severe/chronic development disability:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>