force-app/main/default/objects/Petition__c/fields/Sexual_Documentation_of_injury__c.field-meta.xml
<CustomField>
    <fullName>Sexual_Documentation_of_injury__c</fullName>
    <label>Documentation of injury</label>
    <length>255</length>
    <type>Text</type>
</CustomField>