force-app/main/default/objects/Petition__c/fields/Sexual_Respondent_disclosed_to__c.field-meta.xml
<CustomField>
    <fullName>Sexual_Respondent_disclosed_to__c</fullName>
    <label>Respondent disclosed to: Disclosed what?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>