force-app/main/default/objects/Petition__c/fields/Supervisor_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>