force-app/main/default/objects/Petition__c/fields/The_person_s_with_Legal_Custody_is__c.field-meta.xml
<CustomField>
    <fullName>The_person_s_with_Legal_Custody_is__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>The person(s) with Legal Custody is</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Petitions (The person(s) with Legal Custody is)</relationshipLabel>
    <relationshipName>PetitionsDKUZ</relationshipName>
    <type>Lookup</type>
</CustomField>