force-app/main/default/objects/Petition__c/fields/Within_the_first_12_month_of_the_child_s__c.field-meta.xml
<CustomField>
    <fullName>Within_the_first_12_month_of_the_child_s__c</fullName>
    <label>Within the first 12 month of the child&apos;s</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>