force-app/main/default/objects/Petition__c/fields/X2_Child_s_Current_placement__c.field-meta.xml
<CustomField>
    <fullName>X2_Child_s_Current_placement__c</fullName>
    <label>2.Child&apos;s Current placement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kin Home</fullName>
            </value>
            <value>
                <fullName>Foster Home</fullName>
            </value>
            <value>
                <fullName>Group Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>