force-app/main/default/objects/Petition__c/fields/X3_Parent_1_Name__c.field-meta.xml
<CustomField>
    <fullName>X3_Parent_1_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3.Parent 1 Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Petitions (3.Parent 1 Name)</relationshipLabel>
    <relationshipName>PetitionsDKW1</relationshipName>
    <type>Lookup</type>
</CustomField>